--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,9 @@
 }
 
 :root {
-  --bg-color: #0b0b0e;
+  --bg-color: #0f90d1;
   --text-color: #ffffff;
-  --recent-plays-bg: #13151c;
+  --recent-plays-bg: #00f9e3;
   --recent-plays-bg-hover: #1a1c24;
 }
 
