--- a/src/ui/Home.module.css
+++ b/src/ui/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .banner {
-  background-image: linear-gradient(0deg, var(--bg-color) 0%, #04051700 110%), url(/banner.png);
+  background-image: linear-gradient(0deg, var(--bg-color) 0%, #04051700 40%), url(/banner.jpg);
   background-size: cover;
   background-position: center;
   padding-top: 60px;
